deleted unnecessary files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/normalize.css" />
-    <title>HTML Only Page</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <nav class="header">
@@ -61,8 +61,8 @@
         <div class="experince">
           <h2 class="main-title">Experince</h2>
           <ul>
-            <li>Worked for 2 Years at Goolge</li>
-            <li>Paraticipated in some open source projects</li>
+            <li>Worked for 2 Years at Google</li>
+            <li>Paraticipated in some open-source projects</li>
             <li>CEO of a Software Development Start-Up Company</li>
             <li>Lied about the three previous onse</li>
           </ul>
@@ -70,19 +70,7 @@
       </section>
 
       <!-- ------------------- services section ------------------- -->
-      <!-- <section class="services">
-        <div>
-          <h2>Services Provided</h2>
-          <ul>
-            <li>Mobile Apps Developer (native/cross-platform)</li>
-            <li>Full-Stack Web Developer</li>
-            <li>Lorem ipsum dolor sit. Lorem, ipsum.</li>
-            <li>Lorem, ipsum dolor Lorem, ipsum dolor.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
-          </ul>
-        </div>
 
-      </section> -->
       <div class="services">
         <h2 class="main-title">Services</h2>
         <div class="container">
@@ -121,8 +109,8 @@
         <h2 class="main-title prev">Previous Work</h2>
         <div class="work">
           <ul>
-            <li>Worked for 2 Years at Goolge</li>
-            <li>Paraticipated in some open source projects</li>
+            <li>Worked for 2 Years at Google</li>
+            <li>Paraticipated in some open-source projects</li>
             <li>CEO of a Software Development Start-Up Company</li>
             <li>Lied about the three previous onse</li>
           </ul>
@@ -167,7 +155,7 @@
           <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"><i class="fab fa-linkedin-in"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
-      </div>
+        </div>
       </section>
     </main>
 
