--- a/index.html
+++ b/index.html
@@ -10,56 +10,81 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <nav class="header">
-      <div class="logo"><span>My</span>Portfolio</div>
-      <div class="links">
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#aboutUs">About Us</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#contactUs">Contact Us</a></li>
-        </ul>
-      </div>
-    </nav>
-
+    <header>
+      <nav class="header">
+        <div class="logo"><span>Web</span>Dev</div>
+        <div class="links">
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about-us">About Us</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+          </ul>
+        </div>
+      </nav>
+  
+    </header>
     <main>
       <!-- ------------------- home section ------------------- -->
-      <section class="home">
-        <article class="intro">
-          <p class="who">Who I am</p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio libero,
-          accusamus placeat voluptatibus ipsam voluptatum officiis a illum
-          doloribus laborum veniam hic cumque sit, provident quod odit ipsa nisi
-          veritatis, cum deserunt excepturi voluptates labore sapiente autem!
-          Fuga, possimus similique. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Dolores quae, perferendis maxime inventore
-          reprehenderit, nobis beatae minima aut provident commodi, praesentium
-          distinctio accusantium! Quos velit aperiam, nihil delectus possimus a?
-          Obcaecati sed nesciunt autem pariatur exercitationem quis, magnam sit
-          corrupti? Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Minima facere nam neque at, temporibus exercitationem sapiente, nulla
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-          debitis quidem qui assumenda optio dolorem aspernatur modi
-        </article>
+      <section class="home container" id="home">
         <div class="me">
-          <img src="imgs/hamad.jpg" alt="hamad" />
+          <img src="imgs/hamad1.jpg" alt="hamad" />
         </div>
+        <article class="intro">
+          <p class="who">Full-Stack Developer</p>
+          <h1 class="name">Hamad Bakeel</h1>
+          <p class="def">
+            I'm a web developer who loves programming <br/> <br>
+            learning new stuff is my full-time job
+          </p>
+        </article>
       </section>
 
       <!-- ------------------- about us section ------------------- -->
-      <section class="about-us">
+      <section class="about-us" id="about-us">
         <div class="skills">
-          <h2 class="main-title">Skills</h2>
-          <ul>
+          <div class="main-heading">
+            <h2>skills</h2>
+          </div>
+          <div class="skills">
+            <div class="skill">
+              <h3>HTML <span>80%</span></h3>
+              <div class="the-progress">
+                <span style="width: 80%"></span>
+              </div>
+            </div>
+            <div class="skill">
+              <h3>CSS <span>85%</span></h3>
+              <div class="the-progress">
+                <span style="width: 85%"></span>
+              </div>
+            </div>
+            <div class="skill">
+              <h3>JavaScript <span>90%</span></h3>
+              <div class="the-progress">
+                <span style="width: 90%"></span>
+              </div>
+            </div>
+            <div class="skill">
+              <h3>PHP <span>70%</span></h3>
+              <div class="the-progress">
+                <span style="width: 70%"></span>
+              </div>
+            </div>
+          </div>
+
+          <!-- <ul>
             <li>Mobile Apps Developer (native/cross-platform)</li>
             <li>Full-Stack Web Developer</li>
             <li>Lorem ipsum dolor sit. Lorem, ipsum.</li>
             <li>Lorem, ipsum dolor Lorem, ipsum dolor.</li>
             <li>Lorem ipsum dolor sit amet.</li>
-          </ul>
+          </ul> -->
         </div>
         <div class="experince">
-          <h2 class="main-title">Experince</h2>
+          <div class="main-heading">
+            <h2>experince</h2>
+          </div>
           <ul>
             <li>Worked for 2 Years at Google</li>
             <li>Paraticipated in some open-source projects</li>
@@ -71,8 +96,10 @@
 
       <!-- ------------------- services section ------------------- -->
 
-      <div class="services">
-        <h2 class="main-title">Services</h2>
+      <div class="services" id="services">
+        <div class="main-heading">
+          <h2>services</h2>
+        </div>
         <div class="container">
           <div class="box">
             <i class="fas fa-user-shield fa-4x"></i>
@@ -91,12 +118,12 @@
           </div>
           <div class="box">
             <i class="fas fa-laptop-code fa-4x"></i>
-            <h3>Location</h3>
+            <h3>Profissional Coding</h3>
             <div class="info"><a href="#">Details</a></div>
           </div>
           <div class="box">
             <i class="fas fa-palette fa-4x"></i>
-            <h3>Coding</h3>
+            <h3>Designing</h3>
             <div class="info"><a href="#">Details</a></div>
           </div>
           <div class="box">
@@ -106,7 +133,9 @@
           </div>
         </div>
 
-        <h2 class="main-title prev">Previous Work</h2>
+        <div class="main-heading">
+          <h2>previous work</h2>
+        </div>
         <div class="work">
           <ul>
             <li>Worked for 2 Years at Google</li>
@@ -116,9 +145,12 @@
           </ul>
         </div>
       </div>
+
       <!-- ------------------- contact us section ------------------- -->
-      <section class="contact">
-        <h2 class="main-title">Contact Us</h2>
+      <section class="contact" id="contact">
+        <div class="main-heading">
+          <h2>Contact Us</h2>
+        </div>
         <div class="form">
           <div class="content">
             <form action="">
@@ -162,7 +194,7 @@
     <!-- ------------------- footer ------------------- -->
     <footer>
       <p>Copy Rights 2022 &copy;</p>
-      <p>Made with <span>&hearts;</span> By Hamad</p>
+      <p>Made With <span>&hearts;</span> By Hamad</p>
     </footer>
   </body>
 </html>
