fixed box-shadow for profile image and header links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </section>
 
       <!-- ------------------- about us section ------------------- -->
-      <section class="about-us" id="about-us">
+      <section class="about-us container id="about-us">
         <div class="skills">
           <div class="main-heading">
             <h2>skills</h2>
