made the header fixed and transparent added the previous works section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/normalize.css" />
     <title>Portfolio</title>
+    <style>
+      @import url("css/base.css");
+      @import url("css/photo-grid.css");
+    </style>
   </head>
   <body>
     <header>
@@ -136,14 +140,110 @@
         <div class="main-heading">
           <h2>previous work</h2>
         </div>
-        <div class="work">
-          <ul>
-            <li>Worked for 2 Years at Google</li>
-            <li>Paraticipated in some open-source projects</li>
-            <li>CEO of a Software Development Start-Up Company</li>
-            <li>Lied about the three previous onse</li>
-          </ul>
-        </div>
+
+  
+          <div class="photo-grid">
+            <div
+              class="card card-tall card-wide"
+              style="
+                background-image: url('imgs/img1.jpg');
+              "
+            >
+              <a href="#services" class="show-me">show me</a>
+            </div>
+            <div
+              class="card card-tall"
+              style="
+                background-image: url('imgs/img2.jpg');
+              "
+            >
+            <a href="#services" class="show-me">show me</a>
+          </div>
+            <div
+              class="card"
+              style="
+                background-image: url('imgs/img3.jpg');
+              "
+            >
+            <a href="#services" class="show-me">show me</a>
+          </div>
+            <div
+              class="card"
+              style="
+                background-image: url('imgs/img4.jpg');
+              "
+            >
+            <a href="#services" class="show-me">show me</a>
+          </div>
+            <div
+              class="card"
+              style="
+                background-image: url('imgs/img5.jpg');
+              "
+            >
+            <a href="#services" class="show-me">show me</a>
+          </div>
+            <div
+              class="card"
+              style="
+                background-image: url('imgs/img6.jpg');
+              "
+            >
+            <a href="#services" class="show-me">show me</a>
+          </div>
+            <!-- <div
+              class="card card-wide"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1583562835057-a62d1beffbf3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=949&q=80');
+              "
+            >
+              7
+            </div>
+            <div
+              class="card"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1583483425010-c566431a7710?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1951&q=80');
+              "
+            >
+              8
+            </div>
+            <div
+              class="card"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1583500557349-fb5238f8d946?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1949&q=80');
+              "
+            >
+              9
+            </div>
+            <div
+              class="card"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1583468323330-9032ad490fed?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1955&q=80');
+              "
+            >
+              10
+            </div>
+            <div
+              class="card"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1583425423320-2386622cd2e4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1980&q=80');
+              "
+            >
+              11
+            </div>
+            <div
+              class="card"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1583518257225-f9a8081f6a84?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80');
+              "
+            >
+              12
+            </div> -->
+          </div>
+      
+
+
+
       </div>
 
       <!-- ------------------- contact us section ------------------- -->
